# make_selection

./: .gitignore  LICENSE  README.md  build.bat  publish.bat  pyproject.toml  requirements.txt  run.bat  run_tests.bat
src/: main.c  make_selection.c  make_selection.h
src/make_selection/: __init__.py  __main__.py  key_codes.py  make_selection.py  windows.py
src/make_selection/mappings/: mac.py  windows.py
test/: test_windows.py
