[project]
name = "make_selection"
version = "0.0.1"
authors = [
  { name="Steven Frazee", email="stevefrazee123@gmail.com" },
]
description = "Package for interactive command line menu"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows",
]
